2025-10-14

- Setting an operating system-dependent temporary directory environment 
  for use by script and internally called applications
- Added french translation (Help with translation errors is welcome!)

2025-10-06

- Fixed: script aborted due to typo
- Workaround running script by "Open with" on Windows
- Minor script optimizations

2025-09-25

- Improved moving focus by mouse button 1 click away from text input fields

2025-08-27

- Speed up console output
- Hidden console window no longer reduces performance
- For performance reasons, console output window
  can now be disabled during console output generation
  and enabled again later to view cumulative output
- Checkbutton "Logging of server requests" has moved to main menu
  now concerning Mapsforge tile server requests
  as well as external tile server (TMS) requests
 
2025-08-22

- Modified console again
  to prevent from potential core dump on Linux 

2025-08-20

- Modified console output to avoid console potentially
  freezing and becoming unresponsable to keyboard/mouse
  due to being flooded

2025-06-14

- Added support for Marlin-renderer for JDK17+

2025-04-28

- Fixed: Spaces in temporary folder path resulted in error message
  "[SRV] Error: Could not find or load main class ...log4j.properties" 

2025-03-05

- (Re-)allowed positioning insert cursor in text input fields
- Selection in file selection window was not highlighted (Linux only!)
- Removed ability to disable the output console completely
- Suppressed meaningless SLF4J information output
- Removed work around to remove remaining temporary Tcl folder
  as Tcl bug was fixed in recent Tcl versions.
- Updated README

2025-01-28

- Now showing Tcl/Tk version and script release date in output console
- Updated README hints

2025-01-20

- Improved input handling of number values
- Changed hillshading parameter text to Mapsforge notation
- Added fast adaptive hillshading "adaptasy" (server version >= 0.23.0.1)