@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 if {![info exists tk_version]} {package require Tk}
 wm withdraw .
 
-set version "2025-10-14"
+set version "2025-11-01"
 set script [file normalize [info script]]
 set title [file tail $script]
 
@@ -330,6 +330,12 @@ if {$tcl_platform(os) == "Windows NT"} {
 } else {
   error_message [mc e03 $tcl_platform(os)] exit
 }
+
+# Create temporary files folder and delete on exit
+
+file mkdir $tmpdir
+rename ::exit ::quit
+proc exit {args} {catch {file delete -force $::tmpdir}; eval quit $args}
 
 # Restore saved settings from folder ini_folder
 
@@ -650,15 +656,15 @@ foreach line [split $result \n] {
   set server_string $data
   set data [split $data .]
   if {[llength $data] != 4} \
-    {error_message [mc e07 "Mapsforge Server" $server_string 0.21.0.0] exit}
+    {error_message [mc e07 "Mapsforge Server" $server_string 0.22.0.0] exit}
   foreach item $data {set server_version [expr 100*$server_version+$item]}
   break
 }
 
 if {$rc || $server_version == 0} \
   {error_message [mc e08 Server [get_shell_command $command] $result] exit}
-if {$server_version < 210000} \
-  {error_message [mc e07 "Mapsforge Server" $server_string 0.21.0.0] exit}
+if {$server_version < 220000} \
+  {error_message [mc e07 "Mapsforge Server" $server_string 0.22.0.0] exit}
 
 # Looking for installed URL tool "curl"
 
@@ -1320,9 +1326,8 @@ proc choose_dem_folder {} {
 
 labelframe .shading.algorithm -labelanchor w -text [mc l83]:
 pack .shading.algorithm -expand 1 -fill x -pady 2
-set list {}
+set list {stdasy simplasy hiresasy}
 if {$server_version >= 230001} {lappend list adaptasy}
-if {$server_version >= 220000} {lappend list stdasy simplasy hiresasy}
 combobox .shading.algorithm.values -width 12 \
 	-validate key -validatecommand {return 0} \
 	-textvariable shading.algorithm -values $list
@@ -1864,7 +1869,6 @@ proc test_server_url {} {
 
   set logsep ""
   set logfmt "%-17s : %s"
-  file mkdir $::tmpdir
   set fdlog [file tempfile]
 
   set ::curl_echo 1
@@ -2892,16 +2896,11 @@ while {1} {
   vwait action
   if {$action == 0} {
     foreach item {global shading tmsserver tiles} {save_${item}_settings}
-    catch {file delete -force $tmpdir}
     exit
   }
   unset action
   if {[selection_ok]} break
 }
-
-# Create server's temporary files folder
-
-file mkdir $tmpdir/tasks
 
 # Create server logging properties
 
@@ -2913,6 +2912,10 @@ puts $fd "log4j.appender.stdout.Target=System.out"
 puts $fd "log4j.appender.stdout.layout=org.apache.log4j.PatternLayout"
 puts $fd "log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %m%n"
 close $fd
+
+# Create server's temporary files folder
+
+file mkdir $tmpdir/tasks
 
 # Run render job
 
@@ -2937,10 +2940,6 @@ while {$action == 1} {
   if {![info exists action]} {vwait action}
 }
 unset action
-
-# Delete temporary files folder
-
-catch {file delete -force $tmpdir}
 
 # Unmap main toplevel window
 
